--- a/figures/barplot-associativity.tex
+++ b/figures/barplot-associativity.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \begin{tikzcd}
 	& S_1 \\
-	{S_2 \cup S_3} && {S_1 \cup S_2 \cup S_3 = B_1}
+	{S_2 \cup S_3} && {S_1 \cup S_2 \cup S_3}
 	\arrow["{-\cup S_2}"'{pos=0.7}, from=1-2, to=2-1]
 	\arrow["{- \cup (S_2 \cup S_3)}"{pos=0.7}, from=1-2, to=2-3]
 	\arrow["{- \cup S_3}"', from=2-1, to=2-3]
